--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,10 +18,12 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <!--いいね機能　部分テンプレート-->
-          <td><%= render "favorites/btn", book: @book %></td>
+          <td id="favorite_btn_<%= @book.id %>">
+            <%= render "favorites/btn", book: @book %>
+          </td>
           <!--コメントの表示-->
           <td>コメント数： <%= @book.book_comments.count %></td>
-          
+
           <% if @user == current_user %>
                 <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
           <% end%>
