--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,6 +21,10 @@
           <td id="favorite_btn_<%= @book.id %>">
             <%= render "favorites/btn", book: @book %>
           </td>
+          <!--コメント機能　非同期通信-->
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>
           <!--コメントの表示-->
           <td>コメント数： <%= @book.book_comments.count %></td>
 
@@ -32,7 +36,10 @@
           <% end %>
         </tr>
       </table>
-      <%= render "book_comments/index", book: @book %>
+
+      <div id="comment_index">
+        <%= render "book_comments/index", book: @book %>
+      </div>
       <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
     </div>
   </div>
