--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -17,6 +17,10 @@
     <th>followers</th>
     <th><%= link_to user.followers.count, user_followers_path(user) %></th>
   </tr>
+  <!--DM機能-->
+   <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+    <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
+   <% end %>
 </table>
 
 　<!--フォロー・フォロワー機能-->
