--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -18,9 +18,6 @@
     <th><%= link_to user.followers.count, user_followers_path(user) %></th>
   </tr>
   <!--DM機能-->
-   <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
-    <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
-   <% end %>
 </table>
 
 　<!--フォロー・フォロワー機能-->
@@ -31,5 +28,10 @@
     <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
       <i class="fas fa-user-cog"></i>
     <% end %>
+  <% end %>
+  
+  <!--DM機能-->
+  <% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+    <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
   <% end %>
 </div>
